<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".contacts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/g1"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:src="@drawable/person2"
                android:tint="#1abc9c"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:text="@string/l1"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                />


            <ImageButton
                android:id="@+id/buttonnitika"
                android:layout_width="66dp"
                android:layout_height="60dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="6dp"
                android:background="@android:color/transparent"
                android:src="@drawable/phone2" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:background="@drawable/g2"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:src="@drawable/person2"
                android:tint="#1abc9c"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/l2"
                android:textColor="#ffffff"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                />


            <ImageButton
                android:id="@+id/buttoncall2"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="6dp"
                android:src="@drawable/phone2"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/g1"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:src="@drawable/person2"
                android:layout_marginTop="5dp"
                android:tint="#1abc9c"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:text="@string/l3"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                />

            <ImageButton
                android:id="@+id/buttoncall4"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="6dp"
                android:src="@drawable/phone2"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:background="@drawable/g2"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:src="@drawable/person2"
                android:tint="#1abc9c"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:text="@string/l4"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                />

            <ImageButton
                android:id="@+id/buttoncall5"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginLeft="0dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="6dp"
                android:src="@drawable/phone2"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/g1"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:src="@drawable/person2"
                android:tint="#1abc9c"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:text="@string/l5"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                />

            <ImageButton
                android:id="@+id/buttoncall6"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginLeft="70dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="6dp"
                android:src="@drawable/phone2"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:background="@drawable/g2"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:src="@drawable/person2"
                android:tint="#1abc9c"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:text="@string/l6"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                />

            <ImageButton
                android:id="@+id/buttoncall7"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginLeft="45dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="6dp"
                android:src="@drawable/phone2"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/g1"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:src="@drawable/person2"
                android:tint="#1abc9c"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:text="@string/l7"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                />

            <ImageButton
                android:id="@+id/buttoncall8"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginLeft="85dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="6dp"
                android:src="@drawable/phone2"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:background="@drawable/g2"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="58dp"
                android:src="@drawable/person2"
                android:tint="#1abc9c"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:text="@string/l8"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                />

            <ImageButton
                android:id="@+id/buttoncall9"
                android:layout_width="65dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:background="@android:color/transparent"
                android:layout_marginTop="6dp"
                android:src="@drawable/phone2"
                android:layout_marginRight="30dp"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>